src/objects/PE_Logger__c.object
<CustomObject>
    <fields>
        <fullName>PE_JSON__c</fullName>
        <description>json for PE</description>
        <label>PE JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <description>Unique Id for the PE</description>
        <label>Unique Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>PE Logger</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Unique_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>PE Logger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PE Loggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>